--- a/html/loginafterpassword.html
+++ b/html/loginafterpassword.html
@@ -18,7 +18,7 @@
     <!-- start header -->
     <header>
         <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="padding-top: 19px;border-color: #83c4a197;background-color: #83c4a197;padding-bottom: 19px;margin-bottom: 18px;">
-            <img src="..\images\Logo.png" style="margin-left: 20px;margin-right: 20px;border-radius: 20px;border-color: #dcfee3;width: 100px;height: 100px;color: var(--bs-success-border-subtle);padding-top: 0px;margin-bottom: 2px;padding-bottom: 0px;margin-top: 0px;padding-right: 8px;" width="92" height="100" />
+            <img src="../images/Logo.png" style="margin-left: 20px;margin-right: 20px;border-radius: 20px;border-color: #dcfee3;width: 100px;height: 100px;color: var(--bs-success-border-subtle);padding-top: 0px;margin-bottom: 2px;padding-bottom: 0px;margin-top: 0px;padding-right: 8px;" width="92" height="100" />
             <span style="color: rgb(0, 0, 0);margin-left: 20px;padding-left: 0px;margin-top: -99px;padding-right: 0px;margin-right: 337px;margin-bottom: -64px;padding-top: 27px;padding-bottom: 0px;font-size: 32px;"></span>
             <div class="container">
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -154,7 +154,7 @@
 
                                 <script src="../javaScript/logIn.js"></script>
                                 <script src="../javaScript/sendemail.js"></script>
-                                <script src="..\javaScript\script.js"></script>
+                                <script src="../javaScript/script.js"></script>
                             </form>
 
 
