--- a/html/billdetails.html
+++ b/html/billdetails.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="icon" href="../images/Logo.png">
-    <link rel="stylesheet" href="..\styles\registerFormBM.css">
+    <link rel="stylesheet" href="../styles/registerFormBM.css">
     <link rel="stylesheet" href="../styles/basic.css">
     <title>Bill Details</title>
     <style>
@@ -63,9 +63,9 @@
         }
     </style>
     <!-- Include the Firebase script -->
-    <script type="module" src="..\javaScript\billdetails.js"></script>
-    <script type="module" src="..\javaScript\logout.js"></script>
-    <script type="module" src="..\javaScript\addNotifications.js"></script>
+    <script type="module" src="../javaScript/billdetails.js"></script>
+    <script type="module" src="../javaScript/logout.js"></script>
+    <script type="module" src="../javaScript/addNotifications.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -81,7 +81,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="padding: 19px 20px; border-color: #83c4a197; background-color: #83c4a197; margin-bottom: 18px;">
           <div style="display: flex; align-items: center;">
-            <img src="..\images\Logo.png" style="border-radius: 20px; border-color: #dcfee3; width: 80px; height: 80px; color: var(--bs-success-border-subtle); margin-right: 20px;" width="92" height="100" />
+            <img src="../images/Logo.png" style="border-radius: 20px; border-color: #dcfee3; width: 80px; height: 80px; color: var(--bs-success-border-subtle); margin-right: 20px;" width="92" height="100" />
             <span style="color: rgb(0, 0, 0); font-size: 32px;"></span>
           </div>
           <div class="container">
