--- a/html/edit.html
+++ b/html/edit.html
@@ -12,9 +12,9 @@
 
 
   <!-- Include the Firebase script -->
-  <script type="module" src="..\javaScript\edit.js"></script>
-  <script type="module" src="..\javaScript\logout.js"></script>
-  <script type="module" src="..\javaScript\addNotifications.js"></script>
+  <script type="module" src="../javaScript/edit.js"></script>
+  <script type="module" src="../javaScript/logout.js"></script>
+  <script type="module" src="../javaScript/addNotifications.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
   <!-- Include Bootstrap JS bundle (popper.js included) -->
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark"
       style="padding: 19px 20px; border-color: #83c4a197; background-color: #83c4a197; margin-bottom: 18px;">
       <div style="display: flex; align-items: center;">
-        <img src="..\images\Logo.png"
+        <img src="../images/Logo.png"
           style="border-radius: 20px; border-color: #dcfee3; width: 80px; height: 80px; color: var(--bs-success-border-subtle); margin-right: 20px;"
           width="92" height="100" />
         <span style="color: rgb(0, 0, 0); font-size: 32px;"></span>
@@ -112,7 +112,7 @@
         <div class="card border-0 shadow-lg o-hidden my-5" style="border-radius:30px;" id="heightBox">
           <div class="card-body p-0" style="border-radius:0px;">
             <div class="row">
-              <div class="col-lg-5 d-none d-lg-flex"><img src="..\images\editPhoto.png" width="465" height="1350"
+              <div class="col-lg-5 d-none d-lg-flex"><img src="../images/editPhoto.png" width="465" height="1350"
                   id="BKimage"></div>
               <div class="col-lg-7" style="border-radius:0px;">
                 <div class="p-5" style="border-style:none;border-radius:0px;">
