--- a/html/creatpassword.html
+++ b/html/creatpassword.html
@@ -6,7 +6,7 @@
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <!--Stylesheet-->
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="..\styles\style.css">
 </head>
 <body>
     <form>
@@ -20,6 +20,6 @@
 
     </form>
     <!--Script-->
-    <script src="../javaScript/script.js"></script>
+    <script src="..\javaScript\script.js"></script>
 </body>
 </html>
