--- a/html/resetPassword.html
+++ b/html/resetPassword.html
@@ -30,7 +30,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark"
             style="padding-top: 19px;border-color: #83c4a197;background-color: #83c4a197;padding-bottom: 19px;margin-bottom: 18px;">
-            <img src="../images/Logo.png"
+            <img src="..\images\Logo.png"
                 style="margin-left: 20px;margin-right: 20px;border-radius: 20px;border-color: #dcfee3;width: 80px;height: 80px;color: var(--bs-success-border-subtle);padding-top: 0px;margin-bottom: 2px;padding-bottom: 0px;margin-top: 0px;padding-right: 8px;"
                 width="92" height="100" />
             <span
