--- a/html/homepagePM.html
+++ b/html/homepagePM.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../images/Logo.png">
   <link rel="stylesheet" href="../styles/basic.css">
-  <link rel="stylesheet" href="../styles/homepagePM.css">
+  <link rel="stylesheet" href="..\styles\homepagePM.css">
   <title>Home Page </title>
 
   <!-- Include the Firebase script -->
-  <script type="module" src="../javaScript/homepagePM.js"></script>
-  <script type="module" src="../javaScript/logout.js"></script>
-  <script type="module" src="../javaScript/deletePromotions.js"></script>
-  <script type="module" src="../javaScript/addNotifications.js"></script>
+  <script type="module" src="..\javaScript\homepagePM.js"></script>
+  <script type="module" src="..\javaScript\logout.js"></script>
+  <script type="module" src="..\javaScript\deletePromotions.js"></script>
+  <script type="module" src="..\javaScript\addNotifications.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -28,7 +28,7 @@
   <header>
     <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="padding: 19px 20px; border-color: #83c4a197; background-color: #83c4a197; margin-bottom: 18px;">
       <div style="display: flex; align-items: center;">
-        <img src="../images/Logo.png" style="border-radius: 20px; border-color: #dcfee3; width: 80px; height: 80px; color: var(--bs-success-border-subtle); margin-right: 20px;" width="92" height="100" />
+        <img src="..\images\Logo.png" style="border-radius: 20px; border-color: #dcfee3; width: 80px; height: 80px; color: var(--bs-success-border-subtle); margin-right: 20px;" width="92" height="100" />
         <span style="color: rgb(0, 0, 0); font-size: 32px;"></span>
       </div>
       <div class="container">
@@ -171,7 +171,7 @@
                         <li id="91status" style="display: none;">
                           <p style="color: gray; font-weight: bold; font-size: 18px;">
                             <span>
-                              <img src="../images/91available.png"
+                              <img src="..\images\91available.png"
                                 style="display: inline; float: left; margin-right: 10px;" id="91Img" height="30px"
                                 width="30px">
                             </span>
@@ -182,7 +182,7 @@
                         <li id="95status" style="display: none;">
                           <p style="color: gray; font-weight: bold; font-size: 18px;">
                             <span>
-                              <img src="../images/95available.png"
+                              <img src="..\images\95available.png"
                                 style="display: inline; float: left; margin-right: 10px;" id="95Img" height="30px"
                                 width="30px">
                             </span>
@@ -194,7 +194,7 @@
                         <li id="Dieselstatus" style="display: none;">
                           <p style="color:  gray; font-weight: bold; font-size: 18px;">
                             <span>
-                              <img src="../images/dieselavailable.png"
+                              <img src="..\images\dieselavailable.png"
                                 style="display: inline; float: left; margin-right: 10px;" id="dieselImg" height="30px"
                                 width="30px">
                             </span>
@@ -224,7 +224,7 @@
                         <ol style="list-style-type: none;">
                           <li>
                             <p style="color: gray; font-weight: bold; font-size: 20px;">
-                              <img src="../images/cars.png" id="occupancyImage" style="float: left; display: none;">
+                              <img src="..\images\cars.png" id="occupancyImage" style="float: left; display: none;">
                               <span style="color: rgb(108, 110, 122); margin: 5%;" id="occupancyLevel"></span>
                             </p>
                           </li>
@@ -280,7 +280,7 @@
                         <div class="col-xl-12 me-2">
                           <div class="text-uppercase fw-bold text-info text-xs mb-1"><span class="fs-4"
                               style="--bs-primary:#30b476;--bs-primary-rgb:48,180,118;color:#30b476;">hour</span>
-                            <img src="../images/openHour.png" style="float: right;">
+                            <img src="..\images\openHour.png" style="float: right;">
                             <div id="buttonEditOpenHour" style="display: none;">
                               <a href="editHour.html"><img src="../images/editIcon.png" height="30px" width="30px"></a>
                             </div>
@@ -313,7 +313,7 @@
                                 <a href="editHour.html"><img src="../images/editIcon.png" height="30px"
                                     width="30px"></a>
                               </div>
-                              <img src="../images/closeHour.png" style="float: right;">
+                              <img src="..\images\closeHour.png" style="float: right;">
                             </div>
                             <div class="col-auto">
                               <div class="fw-bold text-dark h5 mb-0 me-3">
@@ -340,7 +340,7 @@
                           <div id="buttonEditOccupancyLevel" style="display: none;">
                             <a href="editOccupancy.html"><img src="../images/editIcon.png" height="30px" width="30px"></a>
                         </div>
-                        <img src="../images/cars.png" style="float: right;">
+                        <img src="..\images\cars.png" style="float: right;">
                       </div>
                       <div class="col-auto">
                         <div class="fw-bold text-dark h5 mb-0 me-3">
