--- a/html/notification.html
+++ b/html/notification.html
@@ -11,8 +11,8 @@
 
 
   <!-- Include the Firebase script -->
-  <script type="module" src="../javaScript/notification.js"></script>
-  <script type="module" src="../javaScript/logout.js"></script>
+  <script type="module" src="..\javaScript\notification.js"></script>
+  <script type="module" src="..\javaScript\logout.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark"
       style="padding: 19px 20px; border-color: #83c4a197; background-color: #83c4a197; margin-bottom: 18px;">
       <div style="display: flex; align-items: center;">
-        <img src="../images/Logo.png"
+        <img src="..\images\Logo.png"
           style="border-radius: 20px; border-color: #dcfee3; width: 80px; height: 80px; color: var(--bs-success-border-subtle); margin-right: 20px;"
           width="92" height="100" />
         <span style="color: rgb(0, 0, 0); font-size: 32px;"></span>
@@ -112,7 +112,7 @@
           id="heightBox">
           <div class="card-body p-0" style="border-radius:0px;">
             <div class="row">
-              <div class="col-lg-5 d-none d-lg-flex"><img src="../images/notificationBK.png" width="450" height="600"
+              <div class="col-lg-5 d-none d-lg-flex"><img src="..\images\notificationBK.png" width="450" height="600"
                   id="BKimage"></div>
               <div class="col-lg-7" style="border-radius:0px;">
                 <!-- start notification -->
