--- a/html/promotions.html
+++ b/html/promotions.html
@@ -11,9 +11,9 @@
 
 
   <!-- Include the Firebase script -->
-  <script type="module" src="../javaScript/promotions.js"></script>
-  <script type="module" src="../javaScript/logout.js"></script>
-  <script type="module" src="../javaScript/addNotifications.js"></script>
+  <script type="module" src="..\javaScript\promotions.js"></script>
+  <script type="module" src="..\javaScript\logout.js"></script>
+  <script type="module" src="..\javaScript\addNotifications.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -29,7 +29,7 @@
   <header>
     <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="padding: 19px 20px; border-color: #83c4a197; background-color: #83c4a197; margin-bottom: 18px;">
       <div style="display: flex; align-items: center;">
-        <img src="../images/Logo.png" style="border-radius: 20px; border-color: #dcfee3; width: 80px; height: 80px; color: var(--bs-success-border-subtle); margin-right: 20px;" width="92" height="100" />
+        <img src="..\images\Logo.png" style="border-radius: 20px; border-color: #dcfee3; width: 80px; height: 80px; color: var(--bs-success-border-subtle); margin-right: 20px;" width="92" height="100" />
         <span style="color: rgb(0, 0, 0); font-size: 32px;"></span>
       </div>
       <div class="container">
@@ -109,7 +109,7 @@
         <div class="card border-0 shadow-lg o-hidden my-5" style="border-radius:30px;" id="heightBox">
           <div class="card-body p-0" style="border-radius:0px;">
             <div class="row">
-              <div class="col-lg-5 d-none d-lg-flex"><img src="../images/promotions.png" width="500" height="650"
+              <div class="col-lg-5 d-none d-lg-flex"><img src="..\images\promotions.png" width="500" height="650"
                   id="BKimage"></div>
               <div class="col-lg-7" style="border-radius:0px;">
                 <div class="p-5" style="border-style:none;border-radius:0px;">
@@ -124,7 +124,7 @@
                       <label class="label" style="color: gray; font-weight: 660; margin-right: 10px; margin-left: 5%; margin-top: 3%;">Promotions</label>
                       <button id="stationPromotionsButton" type="button" class="add-button"
                         style="border: 2px solid #f8a51a; border-radius: 45%; background-color: white; height: 35px; width: 35px; float: right; margin-top: 1.5%;">
-                        <img src="../images/addPromotions.png" height="20px" width="20px" style="float: right;">
+                        <img src="..\images\addPromotions.png" height="20px" width="20px" style="float: right;">
                       </button>
                       <br>
                       <br>
