--- a/html/registerFormBM.html
+++ b/html/registerFormBM.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="icon" href="../images/Logo.png">
-    <link rel="stylesheet" href="../styles/registerFormBM.css">
+    <link rel="stylesheet" href="..\styles\registerFormBM.css">
     <link rel="stylesheet" href="../styles/basic.css">
     <title>Register Form</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     
 
     <!-- Include the Firebase script -->
-    <script type="module" src="../javaScript/registerForm.js"></script>
-    <script type="module" src="../javaScript/logout.js"></script>
+    <script type="module" src="..\javaScript\registerForm.js"></script>
+    <script type="module" src="..\javaScript\logout.js"></script>
 </head>
 
 
@@ -23,7 +23,7 @@
 <!-- start header -->
 <header>
     <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="padding-top: 19px;border-color: #83c4a197;background-color: #83c4a197;padding-bottom: 19px;margin-bottom: 18px;">
-      <img src="../images/Logo.png" style="margin-left: 20px;margin-right: 20px;border-radius: 20px;border-color: #dcfee3;width: 80px;height: 80px;color: var(--bs-success-border-subtle);padding-top: 0px;margin-bottom: 2px;padding-bottom: 0px;margin-top: 0px;padding-right: 8px;" width="92" height="100" />
+      <img src="..\images\Logo.png" style="margin-left: 20px;margin-right: 20px;border-radius: 20px;border-color: #dcfee3;width: 80px;height: 80px;color: var(--bs-success-border-subtle);padding-top: 0px;margin-bottom: 2px;padding-bottom: 0px;margin-top: 0px;padding-right: 8px;" width="92" height="100" />
         <span style="color: rgb(0, 0, 0);margin-left: 20px;padding-left: 0px;margin-top: -99px;padding-right: 0px;margin-right: 337px;margin-bottom: -64px;padding-top: 27px;padding-bottom: 0px;font-size: 32px;"></span>
       <div class="container">
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -72,7 +72,7 @@
                     <div class="card-body p-0" style="border-radius: 0px;">
                         <div class="row">
                             <div class="col-lg-5 d-none d-lg-flex">
-                                <img src="../images/registerPhoto.PNG" width="441"height="500">
+                                <img src="..\images\registerPhoto.PNG" width="441"height="500">
                             </div>
                             <div class="col-lg-7" style="border-radius: 0px;">
                                 <div class="p-5" style="border-style: none;border-radius: 0px;">
