--- a/html/waitApproval.html
+++ b/html/waitApproval.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="icon" href="../images/Logo.png">
-    <link rel="stylesheet" href="../styles/registerFormBM.css">
+    <link rel="stylesheet" href="..\styles\registerFormBM.css">
     <link rel="stylesheet" href="../styles/basic.css">
     <title>Request pending</title>
     <style>
@@ -20,7 +20,7 @@
     </style>
 
     
-    <script type="module" src="../javaScript/logout.js"></script>
+    <script type="module" src="..\javaScript\logout.js"></script>
 
 
 </head>
@@ -33,7 +33,7 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark"
             style="padding-top: 19px;border-color: #83c4a197;background-color: #83c4a197;padding-bottom: 19px;margin-bottom: 18px;">
-            <img src="../images/Logo.png"
+            <img src="..\images\Logo.png"
                 style="margin-left: 20px;margin-right: 20px;border-radius: 20px;border-color: #dcfee3;width: 80px;height: 80px;color: var(--bs-success-border-subtle);padding-top: 0px;margin-bottom: 2px;padding-bottom: 0px;margin-top: 0px;padding-right: 8px;"
                 width="92" height="100" />
             <span
@@ -89,7 +89,7 @@
                     <div class="card-body p-0" style="border-radius: 0px;">
                         <div class="row">
                             <!-- <div class="col-lg-5 d-none d-lg-flex">
-                                <img src="../images/registerPhoto.PNG" width="441"height="436">
+                                <img src="..\images\registerPhoto.PNG" width="441"height="436">
                             </div> -->
                             <div class="col-lg-7" style="border-radius: 0px;">
                                 <div class="p-5" style="border-style: none;border-radius: 0px;">
