--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;display=swap"/>
     <link rel="stylesheet" href="../styles/index2.css">
     <link rel="stylesheet" href="../styles/basic.css">
-    <script type="module" src="..\javaScript\deletePromotions.js"></script>
+    <script type="module" src="../javaScript/deletePromotions.js"></script>
   </head>
   <body style="color:var(--bs-body-bg);background:rgba(255,255,255,0);">
     <div class="background-image"></div>
@@ -20,7 +20,7 @@
 <!-- start header -->
 <header>
   <nav class="navbar navbar-expand-lg fixed-top portfolio-navbar gradient navbar-dark" style="padding-top: 19px;border-color: #83c4a197;background-color: #83c4a197;padding-bottom: 19px;margin-bottom: 18px;">
-    <img src="..\images\Logo.png" style="margin-left: 20px;margin-right: 20px;border-radius: 20px;border-color: #dcfee3;width: 80px;height: 80px;color: var(--bs-success-border-subtle);padding-top: 0px;margin-bottom: 2px;padding-bottom: 0px;margin-top: 0px;padding-right: 8px;" width="92" height="100" />
+    <img src="../images/Logo.png" style="margin-left: 20px;margin-right: 20px;border-radius: 20px;border-color: #dcfee3;width: 80px;height: 80px;color: var(--bs-success-border-subtle);padding-top: 0px;margin-bottom: 2px;padding-bottom: 0px;margin-top: 0px;padding-right: 8px;" width="92" height="100" />
       <span style="color: rgb(0, 0, 0);margin-left: 20px;padding-left: 0px;margin-top: -99px;padding-right: 0px;margin-right: 337px;margin-bottom: -64px;padding-top: 27px;padding-bottom: 0px;font-size: 32px;"></span>
     <div class="container">
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -67,17 +67,17 @@
           <div class="row g-0">
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
               <a href="#">
-                <img class="img-fluid image"src="..\images\Station 1.jpg"/>
+                <img class="img-fluid image"src="../images/Station 1.jpg"/>
               </a>
             </div>
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
               <a href="#">
-                <img class="img-fluid image" src="..\images\Station2.jpg"/>
+                <img class="img-fluid image" src="../images/Station2.jpg"/>
               </a>
             </div>
             <div class="col-md-6 col-lg-4 item zoom-on-hover">
               <a href="#">
-                <img class="img-fluid image" src="..\images\Station 3.jpg.png"/>
+                <img class="img-fluid image" src="../images/Station 3.jpg.png"/>
               </a>
             </div>
           </div>
